--- a/PadelAdmin/lista-jugadores.html
+++ b/PadelAdmin/lista-jugadores.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/fontello.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/lista-articulos.css">
+    <link rel="stylesheet" href="./css/lista-jugadores.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Artículos</title>
+    <title>Lista de Jugadores</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -32,8 +32,8 @@
                         <header class="header d-flex justify-content-between">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                  <li class="breadcrumb-item"><a href="#">Noticia</a></li>
-                                  <li class="breadcrumb-item active" aria-current="page">Artículos</li>
+                                  <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                                  <li class="breadcrumb-item active" aria-current="page">Jugadores</li>
                                 </ol>
                             </nav>
                             <div class="contenedor align-items-center">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="action">
                             <div class="buscador">
-                                <input type="search" placeholder="Buscar Noticia">
+                                <input type="search" placeholder="Buscar Jugador">
                             </div>
                             <button class="boton-grid">
                                 <i class="icon icon-th-large-outline"></i>
@@ -73,17 +73,26 @@
                                 <table class="table table-hover">
                                     <thead>
                                       <tr class="table-active">
-                                        <th scope="col">Fecha</th>
-                                        <th scope="col">Título</th>
-                                        <th scope="col">Torneo</th>
+                                        <th scope="col">Jugador</th>
+                                        <th scope="col">Categoría</th>
+                                        <th scope="col">Torneos Inscritos</th>
+                                        <th scope="col">Pagos Pendientes</th>
                                         <th scope="col">Opciones</th>
                                       </tr>
                                     </thead>
                                     <tbody>
                                       <tr>
-                                        <td>11/09/2020</td>
-                                        <td>"No lo vas a creer, !Nadal a revelado su..."</td>
-                                        <td>Circuito Copa Londres</td>
+                                        <td>
+                                            <div class="tabla-jugador"> 
+                                                <div class="img">
+                                                    <img src="./img/Foto 2.jpg" alt="">                                                    
+                                                </div>
+                                                <p class="mb-0">Devon Lane</p>                                                
+                                            </div>
+                                        </td>
+                                        <td>6°</td>
+                                        <td class="td-azul">5</td>
+                                        <td class="td-rojo">2</td>
                                         <td>
                                             <div class="botones">
                                                 <button class="editar"><i class="icon icon-pencil"></i></button>
@@ -92,9 +101,17 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td>11/09/2020</td>
-                                        <td>"No lo vas a creer, !Nadal a revelado su..."</td>
-                                        <td>Circuito Copa Londres</td>
+                                        <td>
+                                            <div class="tabla-jugador"> 
+                                                <div class="img">
+                                                    <img src="./img/Foto 2.jpg" alt="">                                                    
+                                                </div>
+                                                <p class="mb-0">Devon Lane</p>                                                
+                                            </div>
+                                        </td>
+                                        <td>6°</td>
+                                        <td class="td-azul">5</td>
+                                        <td class="td-rojo">2</td>
                                         <td>
                                             <div class="botones">
                                                 <button class="editar"><i class="icon icon-pencil"></i></button>
@@ -103,20 +120,17 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td>11/09/2020</td>
-                                        <td>"No lo vas a creer, !Nadal a revelado su..."</td>
-                                        <td>Circuito Copa Londres</td>
                                         <td>
-                                            <div class="botones">
-                                                <button class="editar"><i class="icon icon-pencil"></i></button>
-                                                <button class="borrar"><i class="icon icon-trash-empty"></i></button>
+                                            <div class="tabla-jugador"> 
+                                                <div class="img">
+                                                    <img src="./img/Foto 2.jpg" alt="">                                                    
+                                                </div>
+                                                <p class="mb-0">Devon Lane</p>                                                
                                             </div>
                                         </td>
-                                      </tr>
-                                      <tr>
-                                        <td>11/09/2020</td>
-                                        <td>"No lo vas a creer, !Nadal a revelado su..."</td>
-                                        <td>Circuito Copa Londres</td>
+                                        <td>6°</td>
+                                        <td class="td-azul">5</td>
+                                        <td class="td-rojo">2</td>
                                         <td>
                                             <div class="botones">
                                                 <button class="editar"><i class="icon icon-pencil"></i></button>
