--- a/PadelAdmin/card-de-jugadores.html
+++ b/PadelAdmin/card-de-jugadores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -244,7 +244,7 @@
                                 <a class="page-link" href="#">Siguiente</a>
                               </li>
                             </ul>
-                          </nav>
+                        </nav>
                     </div>
                 </div>     
         </main>
