--- a/PadelAdmin/gestion.html
+++ b/PadelAdmin/gestion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/gestion.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Card de Jugadores</title>
+    <title>Gestión</title>
 </head>
 <body>
     <div class="container-fluid">
