--- a/PadelAdmin/lista-pagos.html
+++ b/PadelAdmin/lista-pagos.html
@@ -7,98 +7,99 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/lista-pagos.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Lista de pagos</title>
+    <title>Pagos</title>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="barra-lateral col-12 col-sm-auto">
                 <div class="logo">
-                    <h2>Nombre de la Página</h2>
+                    <h2>Logotipo</h2>
                 </div>
-
                 <div class="menu">
                     <a href="#"><i class="icon icon-home"></i><span>Inicio</span></a>
                     <a href="#"><i class="icon icon-newspaper"></i><span>Noticias</span></a>
                     <a href="#"><i class="icon icon-chart-pie"></i><span>Resultados</span></a>
-                    <a href="#"><i class="icon icon-calendar"></i><span>Calendario</span></a>
                     <a href="#"><i class="icon icon-chart-bar"></i><span>Ranking</span></a>
                     <a href="#"><i class="icon icon-sliders"></i><span>Gestión</span></a>
-                </div>
-
-                <div class="cerrar-sesion d-flex justify-content-end">
-                    <a href="#"><i class="icon icon-logout"></i> Cerrar Sesión</a>
+                    <a href="#" class="cerrar-sesion"><i class="icon icon-logout"></i><span>Cerrar Sesión</span></a>
                 </div>
             </div>
-
-            <main class="col">
+            <main class="main col">
+               
                 <div class="row">
-                    <div class="col">
-                        <div class="header-contenedor">
-                            <div class="header d-flex justify-content-between">
-                                <div class="ruta">
-                                    <p><a href="#" class="link-s">Inicio</a> / <a href="#" class="link-s">Gestión</a> / <a href="#" class="link-p">Pagos</a></p>
-                                </div>
-                                
-                                <div class="profile d-flex">
-                                    <div class="profile-notification d-flex align-items-center">
-                                        <p><i class="icon icon-bell"></i> |</p>
-                                    </div>
-                                    <p class="d-flex align-items-center">Admin Name</p>
-                                    <div class="profile-img">
-                                        <a href="">
-                                            <img src="./img/Foto 3.jpg" alt="">
+                    <div class="col-12">
+                        <header class="header d-flex justify-content-between">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                  <li class="breadcrumb-item"><a href="#">Gestión</a></li>
+                                  <li class="breadcrumb-item active" aria-current="page">Pagos</li>
+                                </ol>
+                            </nav>
+                            <div class="contenedor align-items-center">
+                                <div class="notification mr-3">
+                                    <a href="#"><i class="icon icon-bell"></i></a> <span>|</span>
+                                </div>       
+                                <div class="profile align-items-center">
+                                    <a href="#" class="admin-name mr-2">Admin Name</a>
+                                    <div class="photo">
+                                        <a href="#">
+                                            <img src="./img/Foto 2.jpg" alt="Foto de Perfil">
                                         </a>
                                     </div>
-                                </div>
-                            </div>                                
-                        </div>
-
-                        <div class="op-busqueda d-flex justify-content-between">
-                            <div class="filtros">
-                                <button type="button"><i class="icon icon-sliders"></i>Filtros</button>
+                                </div>                             
                             </div>
-                            <div class="others">
+                        </header>
+                    </div>   
+                    <div class="col-12 contenedor-opciones">
+                        <div class="filtro">
+                            <button type="button">
+                                <i class="icon icon-sliders"></i><span> Filtros</span>
+                            </button>
+                        </div>
+                        <div class="action">
+                            <div class="buscador">
                                 <input type="search" placeholder="Buscar Jugador">
-                                <i class="icon icon-th-large-outline"></i>
-                                <button type="button">Agregar</button>
                             </div>
+                            <button class="boton-grid">
+                                <i class="icon icon-th-large-outline"></i>
+                            </button>
+                            <button type="button" class="agregar">Agregar</button>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="tabla-jugadores col">
-                        <h2 class="like-h2">Pagos</h2>                          
-                          <table class="table mt-3">
-                            <thead class="thead-light t-list">
-                              <tr class="text-center">
-                                <th scope="col">Jugador</th>
-                                <th scope="col">Fecha</th>
-                                <th scope="col">Torneo</th>
-                                <th scope="col">Categoría</th>
-                                <th scope="col">Costo</th>
-                                <th scope="col">Por Pagar</th>
-                                <th scope="col">Opciones</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td scope="row">
-                                        <div class="info d-flex">
-                                            <div class="img">
-                                                <img src="./img/Foto 2.jpg" alt="">
+                    </div> 
+                    <div class="col-12">
+                        <div class="contenedor-table">
+                            <div class="table-responsive">
+                                <table class="table table-hover">
+                                    <thead>
+                                      <tr class="table-active">
+                                        <th scope="col">Jugador</th>
+                                        <th scope="col">Fecha</th>
+                                        <th scope="col">Torneo</th>
+                                        <th scope="col">Categoría</th>
+                                        <th scope="col">Costo</th>
+                                        <th scope="col">Por pagar</th>
+                                        <th scope="col">Opciones</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <td>
+                                            <div class="tabla-jugador"> 
+                                                <div class="img">
+                                                    <img src="./img/Foto 2.jpg" alt="">                                                    
+                                                </div>
+                                                <p class="mb-0">Devon Lane</p>                                                
                                             </div>
-                                            <p class="mb-0 ml-3 d-flex align-items-center">Carla Palacios</p>
-                                        </div>
-                                    </td>
-                                    <td>11/09/2020</td>
-                                    <td>Circuito Copa <br> Londres</td>
-                                    <td>6° <br> Masculino </td>
-                                    <td class="costo">$300</td>
-                                    <td class="por-pagar">$180</td>
-                                    <td>
-                                        <div class="botones">
-                                            <button type="button" class="edit" data-toggle="modal" data-target="#fm-modal-grid"><i class="icon icon-pencil"></i></button>
+                                        </td>
+                                        <td>11/09/2020</td>
+                                        <td>Circuito Copa <br> Londres</td>
+                                        <td>6° <br> Masculino</td>
+                                        <td class="td-verde">$300</td>
+                                        <td class="td-rojo">$180</td>
+                                        <td>
+                                            <div class="botones">
+                                                <button type="button" class="editar" data-toggle="modal" data-target="#fm-modal-grid"><i class="icon icon-pencil"></i></button>
                                             <div class="modal fade" id="fm-modal-grid" tabindex="-1" role="dialog" aria-labelledby="fm-modal" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
@@ -157,18 +158,34 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button type="button" class="borrar"><i class="icon icon-trash-empty"></i></button>
-                                        </div>
-                                    </td>
-                                </tr>                             
-                            </tbody>
-                          </table>
+                                                <button class="borrar"><i class="icon icon-trash-empty"></i></button>
+                                            </div>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                            </div>
+                        </div>
+                        <nav aria-label="..." class="d-flex justify-content-center">
+                            <ul class="pagination">
+                              <li class="page-item disabled">
+                                <span class="page-link">Anterior</span>
+                              </li>
+                              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                              <li class="page-item">
+                                <span class="page-link">
+                                  2
+                                </span>
+                              </li>
+                              <li class="page-item"><a class="page-link" href="#">3</a></li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">Siguiente</a>
+                              </li>
+                            </ul>
+                        </nav>
                     </div>
-                </div>
-            </main>
-        </div>
-    </div>
-
+                </div>     
+        </main>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
