--- a/PadelAdmin/agregar-articulo.html
+++ b/PadelAdmin/agregar-articulo.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="barra-lateral col-12 col-sm-auto">
                 <div class="logo">
-                    <h2>Logotipo</h2>
+                    <img src="./img/Logotipo.png" alt="">
                 </div>
                 <div class="menu">
                     <a href="#"><i class="icon icon-home"></i><span>Inicio</span></a>
