--- a/PadelAdmin/index.html
+++ b/PadelAdmin/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <div class="logo-login d-flex justify-content-center">
-                    <h2>Logotipo</h2>
+                    <img src="./img/Logotipo.png" alt="">
                 </div>
 
                 <div class="contenedor-login">
