--- a/PadelAdmin/agregar-articulo.html
+++ b/PadelAdmin/agregar-articulo.html
@@ -26,7 +26,6 @@
                 </div>
             </div>
             <main class="main col">
-               
                 <div class="row">
                     <div class="col-12">
                         <header class="header d-flex justify-content-between">
@@ -136,7 +135,9 @@
                         </div>
                     </div>
                 </div>     
-        </main>
+            </main>
+         </div>
+    </div>   
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
