--- a/PadelAdmin/ficha-jugador.html
+++ b/PadelAdmin/ficha-jugador.html
@@ -547,7 +547,9 @@
                         </div>
                     </div>   
                 </div>     
-        </main>
+            </main>
+        </div>
+    </div>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <SCRIpt src="./js/script.js"></SCRIpt>
