--- a/PadelAdmin/filtros-partidos.html
+++ b/PadelAdmin/filtros-partidos.html
@@ -115,7 +115,9 @@
                         </div>
                     </div>
                 </div>     
-        </main>
+            </main>
+        </div>
+    </div>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
