--- a/PadelAdmin/gestion.html
+++ b/PadelAdmin/gestion.html
@@ -179,7 +179,9 @@
                           </nav>
                     </div>
                 </div>     
-        </main>
+            </main>
+        </div>
+    </div>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
