--- a/PadelAdmin/inicio.html
+++ b/PadelAdmin/inicio.html
@@ -255,7 +255,9 @@
                         </div>
                     </div>
                 </div>     
-        </main>
+            </main>
+        </div>
+    </div>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/script.js"></script>
