--- a/Site 2.0/noticias.html
+++ b/Site 2.0/noticias.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Artículo</title>
+    <title>Noticias</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -70,116 +70,29 @@
             </div>
         </div>
     </div>
+    <div id="noticias-hero" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/img-prin-home.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <div class="overlay-noticias">
+            <div class="container" style="height: 100%;">
+                <div class="row" style="height: inherit;">
+                    <div class="col-12 d-flex justify-content-center align-items-center">
+                        <h1 class="overlay-title-noticias">Noticias</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-9">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="img-principal-articulo">
-                                <img src="./img/img-registro.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="col-12 contenido-articulo">
-                            <h1>¿Quién es Roger Federer?</h1>
-                            <p>
-                                Roger Federer (Basilea, Suiza; 8 de agosto de 1981) es 
-                                un tenista suizo,​ vencedor de 20 títulos individuales en 
-                                torneos de Grand Slam, el mayor número de toda la historia 
-                                en tenis masculino y ha mantenido el puesto número en el 
-                                ranking de la ATP por un tiempo récord de 310 semanas, 
-                                237 consecutivas. Actualmente ocupa el cuarto lugar en la 
-                                clasificación ATP.
-                            </p>
-                            <p>
-                                Convertido en profesional en 1998, permaneció entre los diez
-                                 mejores tenistas desde 2002 hasta 2016; regresó a este selecto
-                                  grupo después de su victoria en el Abierto de Australia 2017.
-                            </p>
-                            <p>
-                                Roger Federer ha logrado ocho títulos del Campeonato de Wimbledon, 
-                                seis del Abierto de Australia y cinco del Abierto de Estados Unidos,
-                                 así como un título del Torneo de Roland Garros. Es uno de los ocho 
-                                 tenistas que ha logrado vencer en los cuatro torneos del Grand Slam.
-                                  También ostenta el mejor registro en el número de finales de Grand Slam 
-                                  jugadas: 31, diez de estas consecutivas, entre la final de Wimbledon 2005 y 
-                                  el Abierto de Estados Unidos 2007. Así mismo, ha logrado un 
-                                  registro imbatido de seis ATP World Tour Finals, 28 Masters 1000, 
-                                  récord de 24 títulos ATP World Tour 500 y 25 ATP World Tour 250.
-                            </p>
-                            <p>
-                                Su estilo de juego es versátil y apto para todo tipo de superficies,
-                                 y se caracteriza por un excepcional movimiento de pies y variedad 
-                                 de golpes. Efectivo tanto desde el fondo de pista como en la red,
-                                  su aparente falta de esfuerzo durante los partidos, así como sus 
-                                  movimientos eficientes y elegantes, lo han convertido en un tenista 
-                                  muy popular entre sus muchos seguidores. Ha sido galardonado trece 
-                                  veces con el Premio a la Deportividad y ha sido nombrado Jugador
-                                   del Año por la ATP y campeón Mundial por la ITF en cinco ocasiones, 
-                                   mismo número de veces en que se la ha concedido el Premio Laureus 
-                                   al Deportista del Año, cuatro de ellos consecutivos.
-                            </p>
-                        </div>
-                        <div class="col-12 contenedor-compartir-rrss-articulo">
-                            <button class="btn btn-compartir-articulo azul-prin">Compartir</button>
-                            <a href="#"><img src="./img/twitter-azul.png" alt=""></a>
-                            <a href="#"><img src="./img/instagram-azul.png" alt=""></a>
-                            <a href="#"><img src="./img/facebook-azul.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="container" id="perfil-jugador" class="comentarios">
-                    <div class="row">
-                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
-                            <h2 class="title-h2">Comentarios</h2>
-                        </div>
-                        <div class="col-12">
-                            <div class="comentar">
-                                <div class="profile-comentario">
-                                    <div class="img-profile-comentario">
-                                        <img src="./img/img-comentarios.jpg" alt="">
-                                    </div>
-                                    <div class="info-profile-comentario">
-                                        <p>Christian Rojas</p>
-                                        <p>17/09/2020</p>
-                                    </div>
-                                </div>
-                                <div class="contenedor-comentario">
-                                    <textarea name="" id=""></textarea>
-                                </div>
-                                <div class="boton-comentarios">
-                                    <button class="btn btn-comentarios">Comentar</button>
-                                </div>
-                            </div>
-                            <div class="comentar">
-                                <div class="profile-comentario">
-                                    <div class="img-profile-comentario">
-                                        <img src="./img/img-comentarios.jpg" alt="">
-                                    </div>
-                                    <div class="info-profile-comentario">
-                                        <p>Christian Rojas</p>
-                                        <p>17/09/2020</p>
-                                    </div>
-                                </div>
-                                <div class="contenedor-comentario">
-                                    <div class="comentario">
-                                        <p>
-                                            Increíble el artículo. Roger Federer  es uno de mis jugadores 
-                                            favoritos desde que tengo razón. Sigan sacando más contenido. Me encanta.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="boton-responder">
-                                    <button class="btn azul-prin">Responder</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>             
                 <div class="container" id="ultimas-noticias">
                     <div class="row">
                         <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0">
-                            <h2 class="title-h2">Noticias</h2>
+                            <h2 class="title-h2">Artículos Recientes</h2>
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
                             <div class="card" style="width: 18rem;">
@@ -205,6 +118,139 @@
                                 <div class="card-body">
                                   <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
                                   <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span>  - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container" id="ultimas-noticias">
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0">
+                            <h2 class="title-h2">Destacados</h2>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span>  - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span>  - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mt-3">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="./img/img-registro.jpg" alt="Foto de la noticia">
+                                <div class="card-body">
+                                  <h6 class="card-title"><a href="#">!No lo vas a creer! Rafa Nadal reveló su estrategia de juego</a></h6>
+                                  <p class="card-text"><a href="#">Categoría</a><span> - Oct. 2020</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container" id="fotos-recientes">
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
+                            <h2 class="title-h2">Fotos Recientes</h2>
+                        </div>
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12">
+                            <div class="row">
+                                <div class="col-8 pl-0">
+                                    <div class="img-principal-fotos-recientes">
+                                        <a href="#">
+                                            <img src="./img/fotos-recientes.jpg" alt="">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-4 pr-0">
+                                    <div class="row">
+                                        <div class="contenedor-fotos-secundarias">
+                                            <div class="col-12 pr-0 pl-0 mb-2">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-2.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="col-12 pr-0 pl-0 mb-2">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-3.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="col-12 pr-0 pl-0">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-4.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -379,7 +425,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 widget-poster widget">
+                        <div class="col-12 widget-poster widget mb-3">
                             <div class="img-widget-poster">
                                 <img src="./img/poster-widget.png" alt="">
                             </div>
